Added links to index to lead to recipes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
     <a href="recipes/lasagna.html ">Lasagna</a>
+    <a href="recipes/croissant.html ">Croissant</a>
+    <a href="recipes/pizza.html ">Pizza</a>
+    </ul>
 </body>
 </html>
