--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-    <a href="recipes/lasagna.html ">Lasagna</a>
-    <a href="recipes/croissant.html ">Croissant</a>
-    <a href="recipes/pizza.html ">Pizza</a>
+    <li><a href="recipes/lasagna.html ">Lasagna</a></li>
+    <li><a href="recipes/croissant.html ">Croissant</a></li>
+    <li><a href="recipes/pizza.html ">Pizza</a></li>
     </ul>
 </body>
 </html>
