fixed images not showing up

--- a/recipes/croissant.html
+++ b/recipes/croissant.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <h1>Croissant</h1>
-   <img src="croissant.webp" alt="croissantImg" width = "500" height = "600">
+   <img src="croissant.jpeg" alt="croissantImg" width = "500" height = "600">
    <h2>Authentic French croissants. Patience and effort are required but the results are totally worth it!</h2>
 </body>
 </html>
