--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Chicken Alfredo Pizza</h1>
-    <img src="pizza.webp" alt="pizzaImg">
+    <img src="pizza.jpeg" alt="pizzaImg">
     <h2>This Alfredo pizza recipe combines two of my favorites: chicken and pizza. My husband, who isn't fond of chicken, even likes this!</h2>
 </body>
 </html>
