testing fix for images

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="lasagna.jpeg" alt="lasagnaImg" width="500" height="600">
+    <img src="..lasagna.jpeg" alt="lasagnaImg" style="width:600px;height:600px;">
     <h2>This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce and a deliciously cheesy filling. A more traditional homemade lasagna filling would be made with ricotta but my mom's recipe calls for a blend of small-curd cottage cheese and Parmesan. I have found none better anywhere. Serve with a leafy green salad and crusty garlic bread.</h2>
 </body>
 </html>
