fixed imgs (maybe)

--- a/recipes/croissant.html
+++ b/recipes/croissant.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <h1>Croissant</h1>
-   <img src="~/Desktop/CS/repos/odin-recipes/croissant.jpeg" alt="croissantImg" style="width:600px;height:600px;">
+   <img src="..croissant.jpeg" alt="croissantImg" style="width:600px;height:600px;">
    <h2>Authentic French croissants. Patience and effort are required but the results are totally worth it!</h2>
 </body>
 </html>
